# openai-interface

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: errors.rs  lib.rs
src/chat/: mod.rs  request.rs  response.rs
src/chat/response/: no_streaming.rs  streaming.rs
src/completion/: mod.rs  request.rs
src/completions/: mod.rs  request.rs  response.rs
src/files/create/: file-test.txt  mod.rs  request.rs  response.rs
src/rest/: mod.rs  post.rs
