[package]
name = "openai-interface"
version = "0.4.0-alpha.4"
edition = "2024"
authors = [
    "Yu Xiaosong <q5vsx3@163.com>", # 于小淞
]
license = "AGPL-3.0"
description = "A low-level Rust interface for the OpenAI API"
readme = "README.md"
homepage = "https://gitcode.com/astral-sphere/openai-interface"
repository = "https://gitcode.com/astral-sphere/openai-interface"
keywords = ["openai", "api", "chat", "completion", "ai"]
categories = ["api-bindings", "web-programming"]

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
thiserror = "2.0"

reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = { version = "0.3" }
eventsource-stream = "0.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.x86_64-unknown-linux-musl.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }
